--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@next/font": "13.1.5",
+    "@teachablemachine/image": "^0.8.5",
+    "@tensorflow/tfjs": "^4.2.0",
     "@types/node": "^18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
