--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "prisma": "^4.9.0"
   }
 }
