--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "@next/font": "13.1.5",
     "@prisma/client": "^4.9.0",
-    "@tensorflow/tfjs": "^4.2.0",
     "@teachablemachine/image": "^0.8.5",
+    "@tensorflow/tfjs": "^4.2.0",
     "@types/node": "^18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-webcam": "^7.0.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
