--- a/package.json
+++ b/package.json
@@ -12,20 +12,16 @@
     "@next/font": "13.1.5",
     "@prisma/client": "^4.9.0",
     "@tensorflow/tfjs": "^4.2.0",
-    "@tensorflow/tfjs-tflite": "^0.0.1-alpha.9",
-    "@types/node": "^18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
     "next": "^13.1.5",
     "next-auth": "^4.18.10",
-    "nodemailer": "^6.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-firebase-hooks": "^5.1.1",
-    "react-webcam": "^7.0.1",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "prisma": "^4.9.0"
   }
 }
