--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next-auth": "^4.18.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-type-animation": "^2.1.2",
     "typescript": "4.9.4"
   },
   "devDependencies": {
