--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@next/font": "13.1.5",
     "@prisma/client": "^4.9.0",
     "@tensorflow/tfjs": "^4.2.0",
+    "@tensorflow/tfjs-node": "^4.2.0",
+    "@types/multiparty": "^0.0.33",
     "next": "^13.1.5",
     "next-auth": "^4.18.10",
     "react": "^18.2.0",
