--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tensorflow/tfjs": "^4.2.0",
     "@tensorflow/tfjs-node": "^4.2.0",
     "@types/multiparty": "^0.0.33",
+    "axios": "^1.3.1",
     "next": "^13.1.5",
     "next-auth": "^4.18.10",
     "react": "^18.2.0",
