--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "@tensorflow/tfjs-node": "^4.2.0",
     "express": "^4.18.2"
   },
