--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.3.1",
     "next": "^13.1.5",
     "next-auth": "^4.18.10",
+    "qrcode-parser": "^2.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-type-animation": "^2.1.2",
