--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-type-animation": "^2.1.2",
+    "recoil": "^0.7.6",
     "typescript": "4.9.4"
   },
   "devDependencies": {
